# pelagos-mac

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  ONGOING_TASKS.md  README.md  e2e-0.31.0.out  e2e-0.32.0-fix2.out  rust-toolchain.toml
.cargo/: config.toml
docs/: ARCHITECTURE_MENTAL_MODEL.md  CONVENTIONS.md  DESIGN.md  DEVCONTAINER_GUIDE.md  EPIC-pelagos-tui.md  GUEST_CONTAINER_EXEC.md  HOMEBREW_TAP_TOKEN.md  INSTALL.md  IPV6_NETWORKING.md  NETWORK_OPTIONS.md  RUSTERNETES_ON_PELAGOS.md  SIGNING.md  TUI_EVENT_RELIABILITY_PLAN.md  TUI_PLAN.md  USER_GUIDE.md  VM_LIFECYCLE.md  VM_PROFILES.md  VSCODE_ATTACH_SPEC.md
pelagos-guest/: Cargo.toml  build.rs
pelagos-guest/src/: main.rs
pelagos-mac/: Cargo.toml  build.rs
pelagos-pfctl/: Cargo.toml  build.rs
pelagos-pfctl/assets/: com.pelagos.pfctl.embedded.plist.in
pelagos-pfctl/src/: main.rs
pelagos-tui/: Cargo.toml
pelagos-tui/src/: app.rs  main.rs  runner.rs  ui.rs
pelagos-vz/: Cargo.toml
scripts/: build-build-image.sh  build-debian-image.sh  build-release.sh  build-vm-image.sh  com.pelagos.pfctl.plist  dev-reinstall.sh  diagnose-nat66.sh  full-rebuild.sh  install-dev.sh  install-pfctl-daemon.sh  notarize.sh  pelagos-docker-trace.sh  run-integration-tests.sh  setup-kubernetes-tls.sh  setup-tap-token.sh  sign.sh  sync-claude-context.sh  test-bridge-smoke.sh  test-devcontainer-e2e.sh  test-devcontainer-shim.sh  test-e2e.sh  test-extra-disk.sh  test-ipv6-smoke.sh  test-network-smoke.sh  test-pasta-smoke.sh  test-perf.sh  test-port-forward-e2e.sh  test-rusternetes.sh  test-state-files.sh  test-subscribe-events.sh  test-subscribe-reconnect.sh  test-subscribe-stress.sh  test-tap-token.sh  test-utun-relay.sh  test-vscode-attach.sh  update-certs.sh  update-pfctl-daemon.sh  (+5 more)
(+18 files in other folders)
